--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0",
-    "bootstrap-vue": "^1.0.2",
+    "@coreui/vue": "1.0.10",
+    "@nuxtjs/axios": "^5.0.0",
     "bootstrap": "^4.0.0-beta.2",
-    "@nuxtjs/axios": "^5.0.0"
+    "bootstrap-vue": "^1.0.2",
+    "nuxt": "^1.0.0"
   },
   "devDependencies": {
-    "cross-env": "^5.0.1",
     "babel-eslint": "^8.2.1",
+    "cross-env": "^5.0.1",
     "eslint": "^4.15.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0"
