--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   "dependencies": {
     "@coreui/vue": "1.0.10",
     "@nuxtjs/axios": "^5.0.0",
+    "@nuxtjs/font-awesome": "^1.0.3",
     "bootstrap": "^4.0.0-beta.2",
-    "bootstrap-vue": "^1.0.2",
-    "nuxt": "^1.0.0"
+    "bootstrap-vue": "^2.0.0-rc.6",
+    "node-sass": "^4.8.3",
+    "nuxt": "^1.0.0",
+    "nuxt-sass-resources-loader": "^2.0.0",
+    "sass-loader": "^6.0.7"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
